--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Home</title>
     <link rel="stylesheet" href="./assets/reset.css">
     <link rel="stylesheet" href="./assets/style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=EB+Garamond&family=Open+Sans+Condensed:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=EB+Garamond&family=Open+Sans+Condensed:wght@300&family=Playfair+Display:wght@800&display=swap" rel="stylesheet">
 </head>
 <body>
 
@@ -23,9 +23,9 @@
             <nav class="nav-sec">
                 <div>
                 <ul class = "mainMenu">
-                    <li><a href="">Home</a></li>
-                    <li><a href="">Resume</a></li>
-                    <li><a href="">Contact</a></li>
+                    <li><a class="head-link" href="">Home</a></li>
+                    <li><a class="head-link" href="">Resume</a></li>
+                    <li><a class="head-link" href="">Contact</a></li>
                 </ul>
             </div>
             </nav>
@@ -116,12 +116,12 @@
     
             <div class="infoSec">
                 <!-- INPUT SECTION -->
-                <form class="inputSec" action="">
-                    <input type="text" id="fname" name="fname" placeholder="Full Name"><br><br>
-                    <input type="text" id="lname" name="lname" placeholder="Email"><br><br>
+                <!-- <div class="inputSec" action=""> -->
+                    <input class="tbox" type="text" id="fname" name="fname" placeholder="Full Name"><br><br>
+                    <input class="tbox" type="text" id="lname" name="lname" placeholder="Email"><br><br>
                     <input type="text" id="lname" name="lname" placeholder="Message"><br><br>
-                    <input type="submit" value="Submit">
-                  </form>
+                    <!-- <input type="submit" value="Submit"> -->
+                </div>
 
 
             </div>
@@ -134,7 +134,7 @@
     
         <div class="footer">
             <div class="icons">
-                <img src="./assets/Gee on Instagram_ “Family ❣️”_files/github.png" alt="">
+                <a href="https://github.com/gkarmo"><img src="./assets/Gee on Instagram_ “Family ❣️”_files/github.png" alt=""></a>
             </div>
             <div class="icons">
                 <img src="./assets/Gee on Instagram_ “Family ❣️”_files/linkedin.png" alt="">
